objects/Order.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <description>This is an icon field indicating status, tied to the Order Status field.</description>
        <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;Draft&quot;, &quot;015Ka0000029yiB&amp;oid=00DKa00000TJrut&quot;, 
&quot;Active&quot;, &quot;015Ka0000029yiC&amp;oid=00DKa00000TJrut&quot;, 
&quot;Activated&quot;, &quot;015Ka0000029yiC&amp;oid=00DKa00000TJrut&quot;, 
&quot;015Ka0000029yiC&amp;oid=00DKa00000TJrut&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Is_OMS_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bill Macaulay Oct 2022
Used by flow SDO_OMS_Update_CPQ_Order_for_OMS</description>
        <label>Is OMS Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Order_Indicator__c</fullName>
        <description>This is an icon field indicating status, tied to the Order Status field.</description>
        <formula>IMAGE(SDO_OMS_Order_URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;Draft&quot;, &quot;015Ka0000029yiD&amp;oid=00DKa00000TJruu&quot;, 
&quot;Active&quot;, &quot;015Ka0000029yiE&amp;oid=00DKa00000TJruu&quot;, 
&quot;Activated&quot;, &quot;015Ka0000029yiE&amp;oid=00DKa00000TJruu&quot;, 
&quot;015Ka0000029yiE&amp;oid=00DKa00000TJruu&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Order_URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;),
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)),
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Estimated_Delivery_Date__c</fullName>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;),
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)),
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>db_days_EffectiveDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>EffectiveDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_EndDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>EndDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>SDO_Order_Business</fullName>
        <active>true</active>
        <description>Used for B2B order use cases.  Includes contract fields.</description>
        <label>Order - Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Order_Consumer</fullName>
        <active>true</active>
        <description>Order record type used for consumer use case.  Contract and related business fields have been removed from this layout.</description>
        <label>Order - Consumer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>